fixed scroll issue on firefox

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -37,15 +37,7 @@
 	.Pattern .vpc-group {
 		height: 425px!important;
 	}
-	#vpc-components .vpc-component.Pattern {
-		/* margin-top: -288px!important; */
-	}
-	/*#vpc-components .vpc-component.Pattern .vpc-options input[type="radio"]:checked+label.custom:before {
-		margin-top: 0%!important;
-	}
-	#vpc-components .vpc-component.Pattern .vpc-options label.custom:before {
-		margin-top: 0%!important;
-	}*/
+
 	#vpc-price-container {
 		text-align: center!important;
 		order: 2;
